[package]
name = "imagist-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp", "bmp"] }
rayon = "1.10.0"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libheif-rs = "1.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
